[package]
name = "stock_speculator"
version = "0.1.0"
authors = ["Fredrik <freddahf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
serde_json = "1.0.60"
